# robpol86.com

./: .buildinfo  .flake8  .gitattributes  .gitignore  .gitmodules  .htaccess  .travis.yml  3d_printer_mpms2.html  404.html  404.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  Makefile  README.md  _config.yml  about.md  atrix_lapdock.html  bareos_tape_backup.html  blog.html  browserconfig.xml  circle.yml  flash_droid_cricket.html  franklin_t9.html  genindex.html  go.mod  go.sum  hugo.yaml  image.php.html  imagecfg.html  imgur.py  imgur.sh  index.html  mib2_comp_media.html  next.config.js  objects.inv  package-lock.json  package.json  photo_albums.html  (+19 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/: checkout-and-init.yml
.github/workflows/: build.yml  cd.yml  ci.yml  cicd.yml  codeql-analysis.yml  deploy.awk  deploy.yml  diff.yml  linkcheck.yml  ossar-analysis.yml  prod.yml  release.yml  rpooley.yml  stage.yml
Pages/: imagecfg.php.html
_data/: gists.yml  misc.yml  repos.yml
_downloads/b9b25c7f565ad5f0f5055dfe9406db5b/: docker-compose-dsdemo.yml
_includes/: aboutbar.html  comments.html  disqus_comments.html  footer.html  head.html  navbar.html  navigation.html  panelbar.html  scripts.html  sidebar.html  social.html  tracking.html
_layouts/: post.html  redirect.html
_posts/: 2009-11-21-ImageCFG.md  2010-01-07-Linux-Cheat-Sheet.md  2010-01-07-Python-Cheat-Sheet.md  2010-07-03-Jetta-SportWagen-TDI.md  2011-03-10-VIM-Cheat-Sheet.md  2011-04-08-Flashing-Motorola-Droid-to-Cricket.md  2011-08-10-Windows-Cheat-Sheet.md  2011-08-11-US-RNS-510-Video-In-Motion.md  2012-06-12-flashingdroid.md  2012-06-12-imagecfg.md  2012-06-30-Atrix-Lapdock-Other-Uses.md  2012-06-30-Atrix-Lapdock-with-a-Galaxy-Nexus.md  2012-06-30-Atrix-Lapdock-with-a-Laptop.md  2012-06-30-Atrix-Lapdock-with-a-Wii.md  2012-06-30-atrixlapdock.md  2012-06-30-atrixlapdockgnex.md  2012-06-30-atrixlapdocklaptop.md  2012-06-30-atrixlapdockwii.md  2012-07-18-Atrix-Lapdock-with-a-Raspberry-Pi.md  2012-07-18-atrixlapdockraspi.md  2012-08-03-Lapdock-500-Teardown.md  2012-10-17-lapdock500teardown.md  2013-01-21-Atrix-Lapdock-with-a-Nexus-4.md  2013-01-21-atrixlapdocknexus4.md  2013-02-25-rns510vim.md  2013-07-14-Desk-Pictures-at-Work.md  2013-07-15-Desk-Pictures-at-Home.md  2013-10-25-Desk-Pictures-at-Home2.md  2013-11-16-Wireless-Charging-Car-Dock.md  CentOS-L2TP-IPSec-VPN-Server.txt
_static/: airgap.sh  aside_margin.css  auto_reboot.sh  background_image.css  bareos-dir.conf  bareos-fd.conf  bareos-sd.conf  basic.css  bootstrap-carousel.min.css  bootstrap-carousel.min.js  carousel-custom.css  copybutton.css  copybutton.js  copybutton_funcs.js  date-prompt.service  disqus.js  documentation_options.js  filesets.conf  grafana.json  mib2_pidin_env.txt  mib2_top.txt  pygments.css  resize2fs.sh  robots.txt  sbt-webpack-macros.html  site.webmanifest  start_wifi_toggle.sh  t9_cmdline.txt  t9_device_tree.dts  t9_iw_list.txt  t9_kernel_config.txt  t9_usb_composition.txt  telegraf.conf  telegraf.env  webpack-macros.html
_static/styles/: pydata-sphinx-theme.css  sphinx-book-theme.css
assets/css/: custom.css  main.css  main.min.css
blog/: 2002.html  2003.html  2004.html  2005.html  2006.html  2007.html  2009.html  2010.html  2011.html  2012.html  2013.html  2014.html  2015.html  2016.html  2017.html  2018.html  2019.html  2020.html  2021.html  2022.html  2023.html  2024.html  2025.html  2026.html  archive.html  atom.xml  author.html  category.html  drafts.html  language.html  location.html  tag.html
blog/2002/: atom.xml
blog/2003/: atom.xml
blog/2004/: atom.xml
blog/2005/: atom.xml
blog/2006/: atom.xml
blog/2007/: atom.xml
blog/2009/: atom.xml
blog/2010/: atom.xml
docs/: .htaccess  .toc.yml  3d_printer_mpms2.md  404.rst  atrix_lapdock.rst  bareos_tape_backup.rst  conf.py  flash_droid_cricket.rst  franklin_t9.md  imagecfg.rst  index.md  index.rst  key.enc  mib2_comp_media.md  my_awesome_server.rst  photo_albums.rst  postfix_gmail_forwarding.rst  raspberry_pi_luks.rst  raspberry_pi_project_fi.rst  rns_510_vim.rst  root_certificate_authority.rst  vw_alltrack_2019.md  vw_alltrack_2019_glove_box_vent.md  vw_jsw_2010.rst  windows_11_mac.md  wireless_charging_car_dock.rst
index.php/: Atrix_Lapdock_Other_Uses.html  Flashing_Motorola_Droid_to_Cricket.html  ImageCFG.html  Lapdock_500_Teardown.html  US_RNS-510_Video_In_Motion.html
pages/: index.mdx
robpol86_com/: __init__.py  ci.py  create_static.py  edit_button.py  html_context.py  legacy.py  move_static.py  submodule_branch.py  tags.py  thumb_image.py
tests/: Dockerfile  conftest.py  test_changelog.py  test_htaccess.py  test_poetry.py
(+311 files in other folders)
