[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Robpol86.com"
version = "2025.9.6.60948"
description = "My personal website."
readme = "README.md"
authors = [{name = "Robpol86", email = "robpol86@gmail.com"}]
license = "BSD-2-Clause"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = "^3.9"
dependencies = [
    "ablog",
    "myst-parser[linkify] (<5.0.0)",  # TODO
    "sphinx (<9.0.0)",  # TODO
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-sitemap",
    "sphinx-thumb-image @ git+https://github.com/Robpol86/sphinx-thumb-image@main", #  TODO
    "sphinxcontrib-youtube",
    "sphinxext-opengraph",
]

[project.urls]
repository = "https://github.com/Robpol86/robpol86.com"

[tool.poetry]
packages = [{include = "robpol86_com"}]

[dependency-groups]
dev = [
    # Docs.
    "sphinx-autobuild",
    # Linters.
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-import-order",
    "pep8-naming",
    "pylint",
    # Tests.
    "pytest",
    "pytest-icdiff",
]

[tool.black]
line-length = 125
target-version = ["py39", "py310", "py311", "py312"]

[tool.pylint.FORMAT]
good-names = ["i", "j", "k", "ex", "Run", "_", "x", "y", "z", "fd"]
ignore = [
    ".venv/*",
    "build/*",
    "dist/*",
    "docs/_build/*",
]
max-line-length = 125
reports = false

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "consider-using-f-string",
    "duplicate-code",
    "fixme",
    "too-many-arguments",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true
min-similarity-lines = 7

[tool.pylint.TYPECHECK]
ignored-modules = ["distutils", "py"]

[tool.pytest.ini_options]
addopts = "--durations=15 --showlocals --verbose --verbose"
log_level = "DEBUG"
