[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Robpol86.com"
version = "2026.1.31.90851"
description = "My personal website."
readme = "README.md"
authors = [{name = "Robpol86", email = "robpol86@gmail.com"}]
license = "BSD-2-Clause"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.14"
dependencies = [
    "ablog",
    "myst-parser[linkify]",
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-sitemap",
    "sphinx-thumb-image",
    "sphinxcontrib-youtube",
    "sphinxext-opengraph",
]

[project.urls]
repository = "https://github.com/Robpol86/robpol86.com"

[tool.poetry]
packages = [{include = "robpol86_com"}]

[dependency-groups]
dev = [
    # Docs.
    "sphinx-autobuild",
    # Linters.
    "ruff",
    # Tests.
    "pytest",
    "pytest-icdiff",
]

[tool.pytest.ini_options]
addopts = "--durations=15 --showlocals --verbose --verbose"
log_level = "DEBUG"

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "PLR", "S"]
extend-select = ["E501"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S607"]
