[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Robpol86.com"
version = "2026.1.31.90851"
description = "My personal website."
readme = "README.md"
authors = [{name = "Robpol86", email = "robpol86@gmail.com"}]
license = "BSD-2-Clause"
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.14"
dependencies = [
    "ablog",
    "myst-parser[linkify]",
    "sphinx",
    "sphinx-book-theme",
    "sphinx-copybutton",
    "sphinx-notfound-page",
    "sphinx-sitemap",
    "sphinx-thumb-image",
    "sphinxcontrib-youtube",
    "sphinxext-opengraph[social_cards]",
]

[project.urls]
repository = "https://github.com/Robpol86/robpol86.com"

[tool.hatch.build.targets.sdist]
include = ["robpol86_com"]

[tool.hatch.build.targets.wheel]
include = ["robpol86_com"]

[dependency-groups]
dev = [
    # Docs.
    "sphinx-autobuild",
    # Linters.
    "ruff",
    # Tests.
    "coverage[toml]",
    "pytest",
    "pytest-cov",
    "pytest-icdiff",
]

[tool.coverage.report]
exclude_lines = [
    "^\\s*from",
    "^\\s*import",
]
fail_under = "${COVERAGE_FAIL_UNDER-0}"

[tool.coverage.run]
branch = true

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --durations=15 --showlocals --verbose --verbose"
log_level = "DEBUG"

[tool.ruff]
line-length = 125

[tool.ruff.lint]
select = ["D", "E", "F", "I", "N", "PLR", "S"]
extend-select = ["E501"]
ignore = ["D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S607"]
